Please develop Android application capable of: * Store each unique device's data in history, use another table/list * Stored data should persist * Implement devices pairing (if possible) * Use list adapter
EDIT - new requirement
Application should be able to log signal information to text file after pressing button. The same button should stop logging process. File format:
[SSID] [MAC] [SIGNAL STRENGTH %] [RSSI]

Zrobione:

* Scanning for available bluetooth devices +
* Displaying all found devices as a list +
http://stackoverflow.com/questions/10795424/how-to-get-the-bluetooth-devices-as-a-list
* Device specific data should be displayed after selecting any record + ( wyświetlane za pomocą Toastów)

Dodatkowe:
https://github.com/apache/pig/blob/89c2e8e76c68d0d0abe6a36b4e08ddc56979796f/src/org/apache/pig/impl/util/ObjectSerializer.java
przechowywanie tablicy w sharedpreferances

Powyższy kod ograniczony jest licencja
Użyje setów

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">BluetoothApp</string>
     <string name="scan_button">Scan</string>
-    <string name="visibility_button">Be visible</string>
-
+    <string name="visibility_button">Become visible</string>
+    <string name="save_button">Save</string>
 </resources>
